# TA_demo

./: CMakeLists.txt  DFA.json  Database.cpp  Database.h  Input.cpp  Input.h  Output.cpp  Output.h  SpamFilter.cpp  SpamFilter.h  main.cpp  outputolivia.txt
Inbox_demo/School/: Input.txt
Input/: Input.txt  Spam.txt  instructies.txt  instructies_sinem.txt
Output/: SpamFilterResults.txt  outputolivia.txt
TOi/Dio/: DFADio.cpp  DFADio.h  ENFADio.cpp  ENFADio.h  MyStack.cpp  MyStack.h  NFADio.cpp  NFADio.h  REDio.cpp  REDio.h  StateDio.cpp  StateDio.h  StateSetDio.cpp  StateSetDio.h  json.hpp  oldTestCode.txt
TOi/Dio/product_tests/: input-product-or1.json  input-product-or2.json
TOi/Dio/scc_tests/: input-ssc1.json  test-ssc1.json  test2-ssc1.json  test3-ssc1.json  test4-ssc1.json
TOi/Jonathan/SSC_and_TFA/: DFAJonathan.cpp  DFAJonathan.h  NFAJonathan.cpp  NFAJonathan.h  StateJonathan.cpp  StateJonathan.h  TransitionJonathan.cpp  TransitionJonathan.h  json.hpp
TOi/Olivia/: ODFA.cpp  ODFA.h  ONFA.cpp  ONFA.h  ORE.cpp  ORE.h  RE.h
TOi/Sinem/Productautomaat/: DFAConfig.cpp  DFAConfig.h  SDFA.cpp  SDFA.h  State.cpp  State.h  Transition.cpp  Transition.h  json.hpp
TOi/Sinem/TATOi/: NFAConfig.cpp  NFAConfig.h  SNFA.cpp  SNFA.h  State.cpp  State.h  ToDFAConfig.cpp  ToDFAConfig.h  Transition.cpp  Transition.h
Utils/: DBC.h  DatabaseUtils.cpp  DatabaseUtils.h  SpamFilterUtils.cpp  SpamFilterUtils.h
